force-app/main/default/objects/Einstein_Settings__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <length>128</length>
    <type>Text</type>
</CustomField>