force-app/main/default/objects/Einstein_Settings__c/fields/Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Type__c</fullName>
    <label>Authentication Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>