force-app/main/default/objects/Einstein_Settings__c/fields/CacheName__c.field-meta.xml
<CustomField>
    <fullName>CacheName__c</fullName>
    <label>Cache Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>