force-app/main/default/objects/Einstein_Settings__c/fields/CertName__c.field-meta.xml
<CustomField>
    <fullName>CertName__c</fullName>
    <description>the Salesforce name of your security certificate.  (PKS method)</description>
    <inlineHelpText>the Salesforce name of your security certificate</inlineHelpText>
    <label>CertName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>