force-app/main/default/objects/Einstein_Settings__c/fields/Einstein_EMail__c.field-meta.xml
<CustomField>
    <fullName>Einstein_EMail__c</fullName>
    <label>Einstein EMail</label>
    <type>Email</type>
</CustomField>